//this provides the version of protocol buffers to use
syntax = "proto3";

//give a number of configuration options
option java_multiple_files = true;
option java_package = "newHire.create.permissions";
option java_outer_classname = "newHire2ServiceImpl";

package newHire;

service newHire{
	//setting permissions 
	rpc Permissions(stream permissionRequest) returns (stream permissionResponse);
	//seeing all available permissions
	rpc seePermissions(RequestPermissions) returns (stream AllPermissions);
	//creating a new permission
	rpc setPermissions(NewPermission) returns (CreatedPermission);
	
}

message permissionRequest{
	string text = 1;
}

message permissionResponse{
	string value = 1;
}

message RequestPermissions{
	string text = 1;
}

message AllPermissions{
	string value = 1;
}

message NewPermission{
	string text = 1;
}

message CreatedPermission{
	string value =1;
}